--- a/src/main/resources/IndividualPRegistration.fxml
+++ b/src/main/resources/IndividualPRegistration.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.IndividualPRegistrationController">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="389.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
@@ -31,7 +30,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Hyperlink layoutX="14.0" layoutY="352.0" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToProviderR" layoutX="14.0" layoutY="352.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
             <TextField layoutX="164.0" layoutY="78.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
             <TextField layoutX="284.0" layoutY="78.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
             <Label layoutX="20.0" layoutY="136.0" text="Birth Date">
