--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -8,25 +8,25 @@
    <children>
       <AnchorPane fx:id="logInContainer" prefHeight="400.0" prefWidth="360.0">
          <children>
-            <Label alignment="CENTER" layoutX="117.0" layoutY="37.0" text="CarLounge" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="117.0" layoutY="20.0" text="CarLounge" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="25.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="56.0" layoutY="121.0" text="Username">
+            <Label alignment="CENTER" layoutX="58.0" layoutY="113.0" text="Username">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="59.0" layoutY="161.0" text="Password">
+            <Label alignment="CENTER" layoutX="61.0" layoutY="163.0" text="Password">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <TextField fx:id="userField" layoutX="155.0" layoutY="121.0" />
-            <PasswordField fx:id="passwordField" layoutX="155.0" layoutY="161.0" />
-            <Button fx:id="logintoacc" layoutX="144.0" layoutY="244.0" mnemonicParsing="false" onMouseClicked="#switchToHomeScene" prefHeight="25.0" prefWidth="72.0" text="Log in" />
-            <Button fx:id="goToRegister" layoutX="144.0" layoutY="285.0" mnemonicParsing="false" onMouseClicked="#switchToRegister" prefHeight="25.0" prefWidth="72.0" text="Register" />
+            <TextField fx:id="userField" layoutX="155.0" layoutY="113.0" />
+            <PasswordField fx:id="passwordField" layoutX="155.0" layoutY="163.0" />
+            <Button fx:id="logInToAcc" layoutX="144.0" layoutY="222.0" mnemonicParsing="false" onMouseClicked="#switchToHomeScene" prefHeight="25.0" prefWidth="72.0" text="Log in" />
+            <Button fx:id="goToChoice" layoutX="144.0" layoutY="270.0" mnemonicParsing="false" onMouseClicked="#switchToChoice" prefHeight="25.0" prefWidth="72.0" text="Register" />
          </children>
       </AnchorPane>
    </children>
