--- a/src/main/resources/ProviderRegistration.fxml
+++ b/src/main/resources/ProviderRegistration.fxml
@@ -8,37 +8,19 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
          <children>
             <Label alignment="CENTER" layoutX="88.0" layoutY="14.0" text="Provider Registration">
                <font>
                   <Font name="System Bold" size="25.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="78.0" text="Username">
+            <Label layoutX="61.0" layoutY="92.0" text="Choose what type of provider you are" textAlignment="CENTER">
                <font>
-                  <Font size="16.0" />
+                  <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="17.0" layoutY="136.0" text="Password">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="13.0" layoutY="262.0" text="Confirm Password">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField layoutX="164.0" layoutY="78.0" prefHeight="25.0" prefWidth="219.0" promptText="Usually e-mail" />
-            <PasswordField layoutX="164.0" layoutY="136.0" prefHeight="25.0" prefWidth="219.0" />
-            <PasswordField layoutX="164.0" layoutY="262.0" prefHeight="25.0" prefWidth="219.0" />
-            <Label alignment="CENTER" layoutX="195.0" layoutY="170.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
-            <Button fx:id="goToIndividual" layoutX="36.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Individual">
+            <Button fx:id="goToIndividual" layoutX="37.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Individual">
                <font>
                   <Font size="15.0" />
                </font>
@@ -63,7 +45,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Button fx:id="goToLegal" layoutX="255.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Legal Person">
+            <Button fx:id="goToLegal" layoutX="247.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Legal Person">
                <font>
                   <Font size="15.0" />
                </font>
@@ -78,7 +60,7 @@
                   </DropShadow>
                </effect>
             </Button>
-            <Hyperlink fx:id="goBackToChoice" layoutX="14.0" layoutY="420.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToChoice" layoutX="17.0" layoutY="231.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
          </children>
       </AnchorPane>
    </children>
