--- a/src/main/resources/ClientRegistration.fxml
+++ b/src/main/resources/ClientRegistration.fxml
@@ -8,14 +8,14 @@
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="573.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
            <children>
                <Label alignment="CENTER" layoutX="104.0" layoutY="14.0" text="Client Registration">
                    <font>
                        <Font name="System Bold" size="25.0" />
                    </font>
                </Label>
-               <Label layoutX="14.0" layoutY="78.0" text="Username">
+               <Label layoutX="14.0" layoutY="78.0" text="Email">
                    <font>
                        <Font size="16.0" />
                    </font>
@@ -40,30 +40,17 @@
                        <Font size="16.0" />
                    </font>
                </Label>
-               <Label layoutX="15.0" layoutY="397.0" text="ID Card">
-                   <font>
-                       <Font size="16.0" />
-                   </font>
-               </Label>
-               <Label layoutX="13.0" layoutY="460.0" text="Driver License">
-                   <font>
-                       <Font size="16.0" />
-                   </font>
-               </Label>
-               <TextField layoutX="164.0" layoutY="78.0" prefHeight="25.0" prefWidth="219.0" promptText="Usually e-mail" />
-               <TextField layoutX="164.0" layoutY="127.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
-               <TextField layoutX="284.0" layoutY="127.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
-               <PasswordField layoutX="164.0" layoutY="227.0" prefHeight="25.0" prefWidth="219.0" />
-               <PasswordField layoutX="164.0" layoutY="348.0" prefHeight="25.0" prefWidth="219.0" />
-               <DatePicker layoutX="164.0" layoutY="177.0" prefHeight="25.0" prefWidth="219.0" />
+               <TextField fx:id="email" layoutX="164.0" layoutY="78.0" prefHeight="25.0" prefWidth="219.0" promptText="e.g. E-mail@provder.com" />
+               <TextField fx:id="firstname" layoutX="164.0" layoutY="127.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
+               <TextField fx:id="lastname" layoutX="284.0" layoutY="127.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
+               <PasswordField fx:id="password" layoutX="164.0" layoutY="227.0" prefHeight="25.0" prefWidth="219.0" />
+               <PasswordField fx:id="confirmPassword" layoutX="164.0" layoutY="348.0" prefHeight="25.0" prefWidth="219.0" />
                <Label alignment="CENTER" layoutX="195.0" layoutY="259.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
                    <font>
                        <Font size="11.0" />
                    </font>
                </Label>
-               <Button layoutX="15.0" layoutY="422.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Attach image" />
-               <Button layoutX="14.0" layoutY="485.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Attach image" />
-               <Button layoutX="171.0" layoutY="510.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="80.0" style="-fx-background-color: #4bb6d6;" text="Submit">
+               <Button fx:id="submit" layoutX="166.0" layoutY="446.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="36.0" prefWidth="80.0" style="-fx-background-color: #4bb6d6;" text="Submit">
                    <font>
                        <Font size="15.0" />
                    </font>
@@ -88,7 +75,10 @@
                        <Font size="13.0" />
                    </font>
                </Label>
-            <Hyperlink fx:id="goBackToChoice" layoutX="12.0" layoutY="535.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToChoice" layoutX="14.0" layoutY="483.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
+            <Text fx:id="registrationMessage" layoutX="11.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="400.0" />
+            <TextField fx:id="birthDate" layoutX="164.0" layoutY="177.0" prefHeight="25.0" prefWidth="219.0" promptText="Date Format MM/dd/yyyy" />
+            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="6.0" layoutY="409.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="400.0" textAlignment="CENTER" />
            </children>
        </AnchorPane>
    </children>
