--- a/src/main/resources/IndividualPRegistration.fxml
+++ b/src/main/resources/IndividualPRegistration.fxml
@@ -20,37 +20,43 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label layoutX="19.0" layoutY="245.0" text="Password">
+            <Label layoutX="19.0" layoutY="289.0" text="Password">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Label layoutX="22.0" layoutY="350.0" text="Confirm Password">
+            <Label layoutX="22.0" layoutY="394.0" text="Confirm Password">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
             <TextField fx:id="email" layoutX="164.0" layoutY="78.0" prefHeight="25.0" prefWidth="219.0" promptText="e.g. E-mail@provder.com" />
-            <PasswordField fx:id="password" layoutX="161.0" layoutY="245.0" prefHeight="25.0" prefWidth="219.0" />
-            <PasswordField fx:id="confirmPassword" layoutX="161.0" layoutY="350.0" prefHeight="25.0" prefWidth="219.0" />
-            <Label alignment="CENTER" layoutX="192.0" layoutY="270.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
+            <PasswordField fx:id="password" layoutX="161.0" layoutY="289.0" prefHeight="25.0" prefWidth="219.0" />
+            <PasswordField fx:id="confirmPassword" layoutX="161.0" layoutY="394.0" prefHeight="25.0" prefWidth="219.0" />
+            <Label alignment="CENTER" layoutX="192.0" layoutY="314.0" text="*Password must contain at least:&#10;*One upper case letter&#10;*One lower case letter&#10;*A number&#10;*8 characters" textAlignment="CENTER">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="143.0" text="First/Last Name">
+            <Label layoutX="15.0" layoutY="131.0" text="First/Last Name">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
             <Hyperlink fx:id="goBackToProviderR" layoutX="14.0" layoutY="502.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
-            <TextField fx:id="firstname" layoutX="161.0" layoutY="143.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
-            <TextField fx:id="lastname" layoutX="281.0" layoutY="143.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
-            <Label layoutX="17.0" layoutY="196.0" text="Birth Date">
+            <TextField fx:id="firstname" layoutX="162.0" layoutY="131.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
+            <TextField fx:id="lastname" layoutX="281.0" layoutY="131.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
+            <Label layoutX="17.0" layoutY="184.0" text="Birth Date">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
+            <Label layoutX="17.0" layoutY="238.0" text="Phone Number">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="phoneNo" layoutX="161.0" layoutY="238.0" prefHeight="25.0" prefWidth="219.0" />
             <Button fx:id="Submit" layoutX="171.0" layoutY="484.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="36.0" prefWidth="80.0" style="-fx-background-color: #4bb6d6;" text="Submit">
                <font>
                   <Font size="15.0" />
@@ -66,9 +72,9 @@
                   </DropShadow>
                </effect>
             </Button>
-            <TextField fx:id="birthDate" layoutX="161.0" layoutY="196.0" prefHeight="25.0" prefWidth="219.0" promptText="Date Format MM/dd/yyyy" />
-            <Text fx:id="registrationMessage" layoutX="4.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="414.0" />
-            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="4.0" layoutY="420.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="414.0" textAlignment="CENTER" />
+            <TextField fx:id="birthDate" layoutX="161.0" layoutY="184.0" prefHeight="25.0" prefWidth="219.0" promptText="Date Format MM/dd/yyyy" />
+            <Text fx:id="registrationMessage" layoutX="4.0" layoutY="446.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="414.0" />
+            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="4.0" layoutY="450.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="414.0" textAlignment="CENTER" />
          </children>
       </AnchorPane>
    </children>
