--- a/src/main/resources/cars.fxml
+++ b/src/main/resources/cars.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane prefHeight="454.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.Cars">
+<StackPane prefHeight="454.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.CarsController">
    <children>
-        <BorderPane prefHeight="200.0" prefWidth="200.0">
+        <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
             <top>
                 <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
                     <children>
@@ -19,6 +24,16 @@
                     </children>
                 </Pane>
             </top>
+         <center>
+            <ListView fx:id="carList" prefHeight="200.0" prefWidth="560.0" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <JFXButton buttonType="RAISED" prefHeight="33.0" prefWidth="147.0" style="-fx-background-color: #D1E4F9;" text="Rent it!" BorderPane.alignment="CENTER">
+               <graphic>
+                  <TextField alignment="CENTER" prefHeight="25.0" prefWidth="72.0" promptText="AR15LLL" />
+               </graphic>
+            </JFXButton>
+         </right>
         </BorderPane>
    </children>
 </StackPane>
