--- a/src/main/resources/NewListing.fxml
+++ b/src/main/resources/NewListing.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.NewListing">
+<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.NewListing">
    <children>
       <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
          <top>
@@ -25,8 +32,7 @@
                <children>
                   <Label layoutX="38.0" layoutY="42.0" text="Make" />
                   <TextField fx:id="make" layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
-                  <Label layoutX="35.0" layoutY="243.0" text="Notes" />
-                  <TextArea fx:id="notes" layoutX="90.0" layoutY="177.0" prefHeight="149.0" prefWidth="440.0" promptText="Must include price/day" wrapText="true" />
+                  <Label layoutX="223.0" layoutY="269.0" text="Price" />
                   <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="381.0" onMouseClicked="#addCar" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Add" />
                   <JFXButton fx:id="switchToHome" buttonType="RAISED" layoutX="14.0" layoutY="381.0" onMouseClicked="#home" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Cancel" />
                   <Label layoutX="219.0" layoutY="42.0" text="Model" />
@@ -39,7 +45,15 @@
                   <Label layoutX="407.0" layoutY="109.0" text="Fuel" />
                   <TextField fx:id="cmc" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
                   <TextField fx:id="fuel" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
-                  <Text fx:id="listingText" layoutX="90.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
+                  <Text fx:id="listingText" layoutX="71.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
+                  <TextField fx:id="price" alignment="CENTER" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="Price per day" />
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="191.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@Images/logo_lightblue.PNG" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="209.0" layoutY="189.0" prefHeight="17.0" prefWidth="55.0" text="No. Plate" />
+                  <TextField fx:id="noPlate" layoutX="272.0" layoutY="185.0" prefHeight="25.0" prefWidth="89.0" promptText="E.g. AR10FIS" />
                </children>
             </Pane>
          </center>
