--- a/src/main/resources/ProviderRegistration.fxml
+++ b/src/main/resources/ProviderRegistration.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ProviderRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
          <children>
             <Label alignment="CENTER" layoutX="88.0" layoutY="14.0" text="Provider Registration">
                <font>
@@ -20,7 +22,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button fx:id="goToIndividual" layoutX="37.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Individual">
+            <JFXButton fx:id="goToIndividual" buttonType="RAISED" layoutX="58.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToIndividual" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Individual">
                <font>
                   <Font size="15.0" />
                </font>
@@ -34,7 +36,7 @@
                      </input>
                   </DropShadow>
                </effect>
-            </Button>
+            </JFXButton>
             <Label fx:id="idPhotoPath" layoutX="164.0" layoutY="401.0">
                <font>
                   <Font size="13.0" />
@@ -45,7 +47,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Button fx:id="goToLegal" layoutX="247.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="36.0" prefWidth="128.0" style="-fx-background-color: #4bb6d6;" text="Legal Person">
+            <JFXButton fx:id="goToLegal" buttonType="RAISED" layoutX="247.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#switchToLegal" prefHeight="33.0" prefWidth="116.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Legal Person">
                <font>
                   <Font size="15.0" />
                </font>
@@ -59,8 +61,13 @@
                      </input>
                   </DropShadow>
                </effect>
-            </Button>
+            </JFXButton>
             <Hyperlink fx:id="goBackToChoice" layoutX="17.0" layoutY="231.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
+            <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="395.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/exit.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
