--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -1,62 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.Home">
-    <children>
-        <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
-            <top>
-                <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label layoutX="14.0" layoutY="7.0" text="New Listing">
-                            <font>
-                                <Font name="System Bold" size="14.0" />
-                            </font>
-                        </Label>
-                        <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
-                    </children>
-                </Pane>
-            </top>
-            <center>
-                <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label layoutX="38.0" layoutY="42.0" text="Make" />
-                        <TextField fx:id="make" layoutX="77.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
-                        <Label layoutX="223.0" layoutY="269.0" text="Price" />
-                        <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="381.0" onMouseClicked="#addCar" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Add" />
-                        <JFXButton fx:id="switchToHome" buttonType="RAISED" layoutX="14.0" layoutY="381.0" onMouseClicked="#home" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #D1E4F9;" text="Cancel" />
-                        <Label layoutX="219.0" layoutY="42.0" text="Model" />
-                        <TextField fx:id="model" layoutX="270.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
-                        <Label layoutX="406.0" layoutY="42.0" text="Year" />
-                        <TextField fx:id="year" layoutX="443.0" layoutY="38.0" prefHeight="25.0" prefWidth="93.0" />
-                        <Label layoutX="32.0" layoutY="109.0" text="Mileage" />
-                        <TextField fx:id="mileage" layoutX="77.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
-                        <Label layoutX="200.0" layoutY="109.0" text="Cub. Capacity" />
-                        <Label layoutX="407.0" layoutY="109.0" text="Fuel" />
-                        <TextField fx:id="cmc" layoutX="282.0" layoutY="105.0" prefHeight="25.0" prefWidth="69.0" />
-                        <TextField fx:id="fuel" layoutX="443.0" layoutY="105.0" prefHeight="25.0" prefWidth="93.0" />
-                        <Text fx:id="listingText" layoutX="71.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="439.13671875" />
-                        <TextField fx:id="price" alignment="CENTER" layoutX="257.0" layoutY="265.0" prefHeight="25.0" prefWidth="120.0" promptText="Price per day" />
-                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="191.0" layoutY="357.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@Images/logo_lightblue.PNG" />
-                            </image>
-                        </ImageView>
-                        <Label layoutX="209.0" layoutY="189.0" prefHeight="17.0" prefWidth="55.0" text="No. Plate" />
-                        <TextField fx:id="noPlate" layoutX="272.0" layoutY="185.0" prefHeight="25.0" prefWidth="89.0" promptText="E.g. AR10FIS" />
-                    </children>
-                </Pane>
-            </center>
-        </BorderPane>
-    </children>
+<StackPane fx:id="contentArea" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.Home">
+    <BorderPane prefHeight="454.0" prefWidth="583.0" style="-fx-background-color: #D1E4F9; -fx-border-color: #D1E4F9;">
+        <top>
+            <Pane prefHeight="32.0" prefWidth="581.0" style="-fx-background-color: #D1E4F9;" BorderPane.alignment="CENTER">
+                <FlowPane hgap="5.0" layoutX="559.0" layoutY="10.0" prefHeight="17.0" prefWidth="17.0" />
+                <Label layoutX="156.0" layoutY="-1.0" prefHeight="32.0" prefWidth="271.0" text="Never fear, your car is here!" textFill="#002e40">
+                    <font>
+                        <Font name="Script MT Bold" size="24.0" />
+                    </font>
+                </Label>
+            </Pane>
+        </top>
+        <center>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="191.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@Images/logo_lightblue.PNG" />
+                </ImageView>
+                <Label layoutX="270.0" layoutY="373.0" text="Contact" />
+                <Label layoutX="327.0" layoutY="390.0" text="rares.mladin@gmail.com" />
+                <Label layoutX="121.0" layoutY="390.0" text="radu.matei15@yahoo.com" />
+                <Label layoutX="478.0" layoutY="404.0" text="CarLounge © 2021" />
+                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="103.0" layoutY="51.0" prefHeight="121.0" prefWidth="375.0" text="CarLounge is all about our users!&#10;Our app is designed as a solution both to people who&#10;are seeking a private means of transport for a &#10;relatively short period of time and to those who &#10;are willing to put their vehicles at other people`s disposal.&#10;" textAlignment="CENTER">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Label>
+                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="118.0" layoutY="166.0" prefHeight="32.0" prefWidth="350.0" text="↓ Meet our founders ↓" textAlignment="CENTER" textFill="#d0e3f7">
+                    <font>
+                        <Font name="Script MT Bold" size="24.0" />
+                    </font>
+                </Label>
+                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="117.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@Images/radu.jpg" />
+                </ImageView>
+                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="317.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@Images/rares.jpg" />
+                </ImageView>
+            </Pane>
+        </center>
+    </BorderPane>
 </StackPane>
