--- a/src/main/resources/login1.fxml
+++ b/src/main/resources/login1.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
@@ -34,6 +35,9 @@
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </JFXButton>
             <TextField fx:id="email" layoutX="70.0" layoutY="157.0" promptText="Email" />
             <PasswordField fx:id="password" layoutX="70.0" layoutY="215.0" promptText="Password" />
@@ -41,6 +45,9 @@
                <image>
                   <Image url="@Images/exit.png" />
                </image>
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
             </ImageView>
             <ImageView fitHeight="116.0" fitWidth="253.0" layoutX="41.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -51,6 +58,9 @@
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </JFXButton>
             <Text fx:id="logInMessage" fill="#fc0000" layoutX="34.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="231.13671875" />
          </children>
